# konsider

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_start.sh
api/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  README.md  docker_entrypoint.sh
api/.sqlx/: query-31a195a0b716dd7cd795f8976f41dcf77fb36fad3b6392aafde7138ce26caaab.json  query-4cb6afc7cbc2781d3799d932fb29aa7436abd864ace9b99be0856c80ba7e33ce.json  query-55b54d9e8a66d067c95c74f97c5314e93728af4dbba5bd5e52d4e0a6b384b553.json  query-68c05b0feddadfeaa7e844199372ab77523f42cdb90859399500e17e7918cdff.json  query-6ce7391e595a857bc79dfdd3fc04e8e99533b7c864bc0399db9ff5ca306d12ca.json  query-ada5a9b2978a4c295268786c84150e2e6e9907b2621aa9363802c835016b172b.json  query-b26016b810647f859f23107cf21f72e2032cee54b5e2e286a1f8a74381a2bc06.json  query-d61c60f6e91e21530e5ca37b02a990fce151480785f95669c097209e0434fec5.json  query-dd9557809f59c4a4e31d2ba38e835f55e67e0ebc6486fe96a1c82312626856d5.json
api/docker/: Dockerfile
api/migrations/: 20240815160624_create_user_table.sql  20240815160624_create_users_table.sql  20240815160659_create_requester_table.sql  20240815160737_create_software_table.sql  20240815160841_create_review_table.sql  20240831133457_seed_admin_user.sql  20240911190659_seed_reviewer_user.sql  20240912163057_create_users_table.down.sql  20240912163057_create_users_table.sql  20240912163057_create_users_table.up.sql  20240912163339_create_requester_table.down.sql  20240912163339_create_requester_table.sql  20240912163339_create_requester_table.up.sql  20240912163352_create_software_table.down.sql  20240912163352_create_software_table.sql  20240912163352_create_software_table.up.sql  20240912163405_create_review_table.down.sql  20240912163405_create_review_table.sql  20240912163405_create_review_table.up.sql  20240912163417_seed_admin_user.down.sql  20240912163417_seed_admin_user.up.sql  20240912163425_seed_reviewer_user.down.sql  20240912163425_seed_reviewer_user.up.sql  20240915204803_add_version_column_to_users_table.down.sql  20240915204803_add_version_column_to_users_table.sql  20240917203238_add_version_column_to_software_table.down.sql
api/scripts/: init_db.sh  init_redis.sh  names.txt  seed_users.sh
api/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs  telemetry.rs
prototype-v2/api/: .env.sample  .gitignore  Cargo.toml
prototype/konsider_actix_api/: Cargo.toml
prototype/konsider_database/: .env  Cargo.toml
prototype_v3/api/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md
server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker_entrypoint.sh
server/.sqlx/: query-0067b5146b91976c5c9eb4ed9ca57fd70e51f69b79a32e8acc277d0b4243eb35.json  query-0a4fbcf694e1b4497c1b6fb4d1b83ac2397c95513270f64fdcdda53cec4d2bba.json  query-260f05e0b1ebd71b4be838b951abb7f5477258971b31826fb0da97d5eaa45d2d.json  query-2648425905ae1190b485e5ddf9267570a81d4ddbddb720cb57d984f634469a36.json  query-27b6d92892d07d274096b56db9d85fbb1d81d985aade5801aca327213b2eb83e.json  query-31565a54c87df3190917321195489cef2ec2bb2f8c651a1aac75cd897e03ed8f.json  query-3364d41857b5635e53aec8afc4872f0e26604968599c03ced7377ed9ca8d9d62.json  query-370034ebae7edcde1ab3b3bdd92823cde41a7b4f71777864787b74ea485ea991.json  query-3dc6fab4ea8a319c0f5d25dea21a675d12349acfd1d42b046042f93f1a7409b2.json  query-4063d7acd9d9c4c24b34864f74f9dd4b59f8b678bdda459b6c1b5c3d87be6c62.json  query-4349fcaa2eb142e5f18b27a15ee9d66a504bb7498c59b2cf31f51de7402dc49f.json  query-4ff5a93c7a834b795142d853ae8e557e3c7b041a6ada84bab557d3b6a1af6c26.json  query-52606564a7c396320dda9ce43f662e2c8397aeb415d02934659360c2518f6812.json  query-53d2ebb1faf3038f1f175e01f5c395b95b679fcd3f33ce0253b00ee1968c8d4c.json  query-5748b918e6a737cf6c5d6b99b561429a0880430343e7d5ec512e1be3a11f06ed.json  query-5a8d94dd6a6e5050b7717398a277d64268a39b8f4ac25b334625e08fd878846e.json  query-6e9e3f818e07f6f29d80986f3db52976e178094d02577a684d7ed19a45a619d6.json  query-81eacc9fd31e93b0f7abcf5beadd2a47a875ea5552c7c1bb903bbb37f1b02009.json  query-84ac02e05848ab338debdd4be1c02b719bbedf4cbe193aed7f13cb3d92b6e50b.json  query-84b4a12a3696d0b7d4221b195598b3d74dd322b6263d7ef50ce69b79627cfc38.json  query-95b9edc2804f480de9226b481fecd3b1c07a3df7bfa6064786f0e1651eaa6f60.json  query-973c8d2c4de2a7179ef6e6ce4aa4accc28386708639bbcde17ba75b1a98a0298.json  query-99a6a13e04e5b2f6812c5ac0dbee5a8cb229a7caccc3704a5970223b79280ed7.json  query-a0d44710968779c55d1b8367494acacd90491405da07d7bdc82c1ef7aa0bdc60.json  query-a600ad01f22dc6f862f1f7c78392745502b1b77f9c5164dd83df32e28b62e103.json  query-a60a680210c88f708758fbcc43ea27b62f578aa09adeb258f1ab6f1dbc45bf62.json  query-ad68f392546407b0b9ccc492940767d47536b45f6d16ff73553483aca946c59b.json  query-ba3d97f0606329fe81327ac15a7eaad438044320df7569f4ab1512032e855bda.json  query-bb8f13b105a5cee3f454356ffcd08eca83ff5303a6ce57c081a1ba42d52b8214.json  query-c0882101eac3cd9a32b2b80c552c8a7a37a8fc16425b2bd7f038d6fca9b26fc4.json  query-c2139e08654199eaaaf2e889e7802d88a308f11a40ed015b9961e73bb205a7be.json  query-c3f1fbac57c1a235026e2809ea68adc1bc4f10571fb9c641bbb80f6ec1042ecf.json  query-d61794b155258565766a4b1f1f3640fd97c935eb11f749d8b93d8940188c02f4.json  query-d8b74dfaa4909cbc68d698a8661389fd9bd8c3d3e8e7e8fca7c1109ba69b3022.json  query-e3009ced70e3f92a7138343282ad985304f711925ef7d727b5818f7c7fa2be93.json  query-e606efc5be0aeee205100f8d7d44e852570f62d0e5f9e86dc009abae2593534e.json
server/config/: local.toml
server/docs/: database_design.md  design_and_architecture.md
server/migrations/: 20241114185503_create_uuid_extension.sql  20241114185536_create_user_account_table.sql  20241114185622_create_requester_table.sql  20241114185635_create_software_table.sql  20241114185702_create_software_request_table.sql  20241114185728_create_review_factor_table.sql  20241114185755_create_software_review_table.sql  20241114185813_create_software_review_response_table.sql  20241114185820_create_user_token_table.sql  20241114190004_create_triggers.sql  20241114190009_create_indexes.sql  20241116164552_seed_admin_user.sql  (+6 more)
(+469 files in other folders)
