[package]
name = "konsider_api"
version = "0.1.0"
authors = ["Huseen Munye"]
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }

tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tower-cookies = "0.10.0"
tower-sessions = "0.12.3"
tower-sessions-redis-store = "0.13.0"

sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "migrate"], default-features = false }

chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.11.0"
validator = "0.18.1"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8.5"
time = "0.3.36"

clap = { version = "4.5.15", features = ["derive", "env"] }
dotenvy = "0.15.7"

serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"

tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3.9"
tracing-appender = "0.2.3"
thiserror = "1.0.63"

[dev-dependencies]
fake = "2.9.2"
reqwest = { version = "0.12.5", features = ["rustls-tls", "cookies"]}
