[package]
name = "konsider_api"
version = "0.1.0"
authors = ["Huseen Munye"]
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7.5"

# Asynchronous runtime
tokio = { version = "1.39.2", features = ["full"] }

# Middleware and service abstractions
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tower-cookies = "0.10.0"
tower-sessions = "0.12.3"
tower-sessions-redis-store = "0.13.0"

# Utilities
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
unicode-segmentation = "1.11.0"
once_cell = "1.19.0"
validator = "0.18.1"
time = "0.3.36"
rand = "0.8.5"

# Error handling
thiserror = "1.0.63"

# CLI argument parsing and environment variable management
clap = { version = "4.5.15", features = ["derive", "env"] }
dotenvy = "0.15.7"

# Serialization and deserialization
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"

# Tracing and logging
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3.9"
tracing-appender = "0.2.3"

# Asynchronous database interaction
[dependencies.sqlx]
version = "0.8.0" 
features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "migrate"] 
default-features = false

[dev-dependencies]
# Fake data generation
fake = "2.9.2"

# HTTP client for making requests
reqwest = { version = "0.12.5", features = ["rustls-tls", "cookies"]}
