[package]
name = "k6r"
version = "0.1.0"
authors = ["Huseen Munye"]
edition = "2021"

[lib]
name = "k6r"
path = "src/lib.rs"

[[bin]]
name = "k6r"
path = "src/main.rs"

[dependencies]
axum = "0.7.7"
config = { version = "0.14.1", default-features = false, features = ["toml"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.9"
