[package]
name = "k6r"
version = "0.1.0"
authors = ["Huseen Munye"]
edition = "2021"

[lib]
name = "k6r"
path = "src/lib.rs"

[[bin]]
name = "k6r"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.7.7"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
config = { version = "0.14.1", default-features = false, features = ["toml"] }
futures-util = { version = "0.3.31", default-features = false }
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = "0.1.10"
jsonwebtoken = "9.3.0"
printpdf = { version = "0.7.0", features = ["embedded_images"] }
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-native-tls = "0.3.1"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "cors", "compression-gzip"] }
tower-service = "0.3.3"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
validator = "0.19.0"

[dev-dependencies]
fake = "3.0.1"
reqwest = "0.12.9"
