[package]
name = "konsider_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "konsider_api"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.10", features = ["env", "derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.39.1", features = ["full"] }
