[package]
name = "konsider_actix_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "konsider_actix_api"

[dependencies]
actix-web = "4.8.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.5"
