[package]
name = "konsider_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
reqwest = "0.12.5"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
