[package]
name = "konsider_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full", "tracing"] }

chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }

clap = { version = "4.5.15", features = ["derive", "env"] }
dotenvy = "0.15.7"

serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"

sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "migrate"] }

tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }

tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3.9"


[dev-dependencies]
reqwest = "0.12.5"
